cn/ev2/manifests/ppe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certnoti-depl
  labels:
    app: certnoti
spec:
  replicas: 2
  selector:
    matchLabels:
      app: certnoti
  template:
    metadata:
      labels:
        app: certnoti
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: certnoti-sa
      runtimeClassName: kata-cc-isolation
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: certnoti
        image: torusacr.azurecr.io/unofficial/certnoti:__IMAGE_TAG__
        ports:
        - containerPort: 8000
      - name: skr
        image: "mcr.microsoft.com/aci/skr:2.7"
        imagePullPolicy: Always
        command:
        - /bin/skr
        volumeMounts:
        - mountPath: /opt/confidential-containers/share/kata-containers/reference-info-base64
          name: endorsement-location
      volumes:
        - name: endorsement-location
          hostPath:
            path: /opt/confidential-containers/share/kata-containers/reference-info-base64

---
apiVersion: v1
kind: Service
metadata:
  name: certnoti-srv
spec:
  type: LoadBalancer
  selector:
    app: certnoti
  ports:
  - port: 80
    targetPort: 8000
